# BudgetBuddy

./: README.md  Resumen Mensual Ingresos y Gastos 2023.xlsx  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: reformat_code.yml
src/: __init__.py  main.py
src/annual_reportting/: __init__.py  annual.py  excel_generator.py  months.py
src/utils/: __init__.py
src/utils/excel_styles/: __init__.py  border_styles.py
src/utils/functionalities/: __init__.py  parser_datetime.py
