[metadata]      
name = BUDGETBUDDY
version = 0.0.0
license = GPL-3.0  
description = Tool for personal use to automate my finances, learning the use of Python and Excel and csv processing.
long_description = file: README.rst
author = Juan Martinez-Aedo
classifiers=
   
[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = 

[options.packages.find]
where=src